<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar" />

        <Button
            android:id="@+id/imageButtonStatisticsIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_box"
            android:text="@string/income"
            android:visibility="visible" />

        <Button
            android:id="@+id/imageButtonStatisticsExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_box"
            android:text="@string/expenses"
            android:visibility="visible" />

        <Button
            android:id="@+id/imageButtonStatisticsMoneybox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_box"
            android:text="@string/moneybox"
            android:visibility="visible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>