<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray"
    tools:context=".activity.MainActivity">

    <include layout="@layout/toolbar" />

    <TableLayout
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237">

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_background_gray"
                    android:contentDescription="@string/income"
                    android:gravity="center_horizontal"
                    android:src="@drawable/icon_income" />

                <TextView
                    android:id="@+id/textViewIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/income"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_background_gray"
                    android:contentDescription="@string/expenses"
                    android:scaleType="center"
                    android:src="@drawable/icon_cost" />

                <TextView
                    android:id="@+id/textViewExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/expenses"
                    android:textSize="24sp" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonMoneybox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_background_gray"
                    android:contentDescription="@string/moneybox"
                    android:src="@drawable/icon_money_box" />

                <TextView
                    android:id="@+id/textViewMoneybox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/moneybox"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_background_gray"
                    android:contentDescription="@string/title_activity_statistics"
                    android:src="@drawable/icon_statistic" />

                <TextView
                    android:id="@+id/textViewStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/title_activity_statistics"
                    android:textSize="24sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>